[CLEAR-35] Added test target

--- a/MobileConsents.xcodeproj/xcshareddata/xcschemes/MobileConsents.xcscheme
+++ b/MobileConsents.xcodeproj/xcshareddata/xcschemes/MobileConsents.xcscheme
@@ -10,7 +10,7 @@
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
-            buildForArchiving = "NO"
+            buildForArchiving = "YES"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9B8E95B32519C8AF001DF8BD"
+               BuildableName = "MobileConsentsTests.xctest"
+               BlueprintName = "MobileConsentsTests"
+               ReferencedContainer = "container:MobileConsents.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
